<resources>
    <string name="app_name">AppPerson</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_login">Login</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="sair">Sair</string>
    <string name="logout">Logout</string>
    <string name="usuarios">Usuarios</string>

    <!-- Login -->
    <string name="login_txtUsuario">Usuário:</string>
    <string name="login_txtSenha">Senha:</string>
    <string name="login_btnEntrar">Entrar</string>
    <string name="login_CkbConectado">Salvar Senha?</string>

    <!-- Validações -->
    <string name="login_valUsuario">Campo Obrigatório.</string>
    <string name="login_valSenha">Campo Obrigatório.</string>
    <string name="campo_obrigatorio">Campo obrigatório.</string>

    <!-- Mensagens -->
    <string name="msg_login_incorreto">Usuário ou senha incorreto.</string>
    <string name="title_activity_cad_usuarios">Cadastro de usuários</string>
    <string name="mensagem_cadastro">Registro cadastrado com sucesso!</string>
    <string name="mensagem_atualizar">Registro atualizado com sucesso!</string>
    <string name="mensagem_erro">Erro ao salvar!</string>

    <string name="usuario_txtNome">Nome:</string>
    <string name="usuario_txtLogin">Login:</string>
    <string name="usuario_txtSenha">Senha:</string>
    <string name="lista_usuarios">Lista de usuários</string>
    <string name="menu_lista">cadastrar</string>
</resources>
