<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.appperson.LoginActivity"
    tools:showIn="@layout/activity_login"    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

                <TextView
                    android:text="@string/login_txtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/login_edtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:text="@string/login_txtSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/login_edtSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginBottom="12dp"/>
                
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_CkbConectado"
                    android:text="@string/login_CkbConectado"
                    android:layout_marginBottom="12dp" />

                <Button
                    android:id="@+id/login_btnEntrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_btnEntrar"
                    android:background="#8B9DC3"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:onClick="logar"/>

        </LinearLayout>
</ScrollView>