<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CadUsuarioActivity"
    tools:showIn="@layout/activity_cad_usuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/NomeDosCampos"
            android:text="@string/usuario_txtNome" />

        <EditText
            android:id="@+id/usuario_edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/NomeDosCampos"
            android:text="@string/usuario_txtLogin" />

        <EditText
            android:id="@+id/usuario_edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/NomeDosCampos"
            android:text="@string/usuario_txtSenha" />

        <EditText
            android:id="@+id/usuario_edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>
</ScrollView>